# sdk-nrf

./: Jenkinsfile  west.yml
applications/asset_tracker/: prj_nrf9160_pca20035_v0_2_2ns.conf  prj_nrf9160_pca20035_v0_3_0ns.conf  prj_nrf9160_pca20035ns.conf
applications/asset_tracker_v2/: CMakeLists.txt  Kconfig.sysbuild  prj.conf
applications/ft_app/: CMakeLists.txt  Kconfig  README.rst  prj.conf  spm.conf
applications/ft_app/src/: fta_defines.h  icmp_ping.c  icmp_ping.h  lte_connection.c  lte_connection.h  lte_connection_tools.c  lte_connection_tools.h  main.c  shell.c  socket.c  socket.h
applications/ft_app/src/at/: at_shell.c  at_shell.h
applications/ft_app/src/curl/: CMakeLists.txt
applications/ft_app/src/curl/include/: Makefile.in
applications/ft_app/src/curl/include/curl/: Makefile  curl.h  curlver.h  fta_curl.h
applications/ft_app/src/curl/lib/: CMakeLists.txt  Makefile.in  connect.c  connect.h  cookie.c  curl_addrinfo.c  curl_addrinfo.h  curl_config.h  http.c  http.h  memdebug.c  multi.c  parsedate.c  parsedate.h  progress.c  select.c  smb.c  timeval.c  url.h  urldata.h
applications/ft_app/src/curl/lib/vauth/: oauth2.c
applications/ft_app/src/curl/lib/vtls/: schannel.c
applications/ft_app/src/curl/tool/: CMakeLists.txt  tool_cb_dbg.c  tool_cb_wrt.c  tool_dirhie.c  tool_easysrc.c  tool_filetime.c  tool_formparse.c  tool_getparam.c  tool_getpass.c  tool_help.c  tool_homedir.c  tool_main.c  tool_msgs.c  tool_operate.c  tool_parsecfg.c  tool_setup.h  tool_util.c
applications/ft_app/src/gnss/: CMakeLists.txt  gnss.c  gnss_shell.c
applications/ft_app/src/iperf/: CMakeLists.txt  cjson.c  iperf.h  iperf_api.c  iperf_api.h  iperf_auth.c  iperf_auth.h  iperf_client_api.c  iperf_config.h  iperf_error.c  iperf_locale.c  iperf_locale.h  iperf_main.c  iperf_sctp.c  iperf_server_api.c  iperf_tcp.c  iperf_time.c  iperf_time.h  iperf_udp.c  iperf_util.c  iperf_util.h  net.c  net.h  portable_endian.h  tcp_info.c  timer.c  timer.h  units.c
applications/ft_app/src/ltelc/: CMakeLists.txt  ltelc.c  ltelc.h  ltelc_api.c  ltelc_api.h  ltelc_shell.c  ltelc_shell.h
applications/ft_app/src/ping/: CMakeLists.txt  icmp_ping.c  icmp_ping.h  icmp_ping_shell.c  icmp_ping_shell.h
applications/ft_app/src/ppp/: CMakeLists.txt  ppp_ctrl.c  ppp_ctrl.h  ppp_mdm_data_rcv.c  ppp_mdm_data_snd.c  ppp_shell.c  ppp_shell.h
applications/ft_app/src/sock/: CMakeLists.txt  sock.c  sock.h  sock_shell.c  sock_shell.h
applications/ft_app/src/utils/: fta_net_utils.c  fta_net_utils.h  fta_time_utils.c  fta_time_utils.h
applications/ft_app/src/utils/freebsd-getopt/: getopt.c  getopt.h
applications/ft_app/src/utils/getopt_port/: getopt.c
applications/usb_uart_bridge/: prj.conf
ext/: CMakeLists.txt  Kconfig
ext/freebsd-getopt/: CMakeLists.txt  Kconfig
ext/iperf3/: CMakeLists.txt  Kconfig  iperf.h  iperf_api.c  iperf_api.h  iperf_auth.h  iperf_client_api.c  iperf_config.h  iperf_error.c  iperf_locale.c  iperf_locale.h  iperf_main.c  iperf_sctp.c  iperf_server_api.c  iperf_tcp.c  iperf_time.c  iperf_udp.c  iperf_util.c  iperf_util.h  net.c  net.h  tcp_info.c  timer.c  units.c
include/: modem_info.h
include/modem/: modem_fota.h  sms.h  (+2 more)
lib/: CMakeLists.txt  Kconfig
samples/nrf9160/modem_shell/: .gitignore  CMakeLists.txt  Kconfig  README.rst  overlay-app_fota.conf  overlay-goboard.conf  overlay-lwm2m.conf  overlay-lwm2m_carrier.conf  overlay-ppp.conf  prj.conf  spm.conf
samples/nrf9160/modem_shell/src/: fta_defines.h  main.c  mosh_defines.h  shell.c
samples/nrf9160/modem_shell/src/at/: at_shell.c  at_shell.h
samples/nrf9160/modem_shell/src/curl/: CMakeLists.txt
samples/nrf9160/modem_shell/src/curl/include/: Makefile
samples/nrf9160/modem_shell/src/curl/include/curl/: Makefile.in  curl.h  curlver.h  mosh_curl.h  typecheck-gcc.h
samples/nrf9160/modem_shell/src/curl/lib/: CMakeLists.txt  connect.c  connect.h  cookie.c  curl_addrinfo.c  curl_addrinfo.h  curl_config.h  curl_setup.h  easyoptions.c  hostip.c  http.c  http.h  memdebug.c  multi.c  parsedate.c  parsedate.h  progress.c  select.c  setopt.c  smb.c  timeval.c  url.h  urldata.h
samples/nrf9160/modem_shell/src/curl/lib/vtls/: schannel.c
samples/nrf9160/modem_shell/src/curl/tool/: CMakeLists.txt  Makefile  Makefile.in  tool_cb_dbg.c  tool_cb_wrt.c  tool_cfgable.c  tool_cfgable.h  tool_dirhie.c  tool_easysrc.c  tool_filetime.c  tool_formparse.c  tool_getparam.c  tool_getpass.c  tool_help.c  tool_homedir.c  tool_main.c  tool_msgs.c  tool_operate.c  tool_parsecfg.c  tool_util.c
samples/nrf9160/modem_shell/src/fota/: CMakeLists.txt  fota.c  fota.h  fota_shell.c
samples/nrf9160/modem_shell/src/gnss/: CMakeLists.txt  gnss.h  gnss_common.c  gnss_gps_driver.c  gnss_shell.c  gnss_shell.h  gnss_socket.c  gnss_supl_support.c  gnss_supl_support.h
samples/nrf9160/modem_shell/src/iperf/: iperf.h  iperf_api.c  iperf_api.h  iperf_auth.c  iperf_client_api.c  iperf_config.h  iperf_error.c  iperf_locale.c  iperf_locale.h  iperf_main.c  iperf_server_api.c  iperf_tcp.c  iperf_udp.c  iperf_util.c  iperf_util.h  net.c  net.h  portable_endian.h  timer.h  units.c
samples/nrf9160/modem_shell/src/ltelc/: CMakeLists.txt  ltelc.c  ltelc.h  ltelc_api.c  ltelc_api.h  ltelc_settings.c  ltelc_settings.h  ltelc_shell.c  ltelc_shell.h  ltelc_shell_pdn.c  ltelc_shell_pdn.h  ltelc_shell_print.c  ltelc_shell_print.h
samples/nrf9160/modem_shell/src/ping/: CMakeLists.txt  icmp_ping.c  icmp_ping.h  icmp_ping_shell.c  icmp_ping_shell.h
samples/nrf9160/modem_shell/src/ppp/: CMakeLists.txt  ppp_ctrl.c  ppp_ctrl.h  ppp_mdm_data_rcv.c  ppp_mdm_data_snd.c  ppp_mdm_data_snd.h  ppp_shell.c  ppp_shell.h
samples/nrf9160/modem_shell/src/sms/: CMakeLists.txt  parser.h  sms.c  sms.h  sms_deliver.c  sms_shell.c  sms_shell.h  string_conversion.c  string_conversion.h
samples/nrf9160/modem_shell/src/sock/: CMakeLists.txt  sock.c  sock.h  sock_shell.c  sock_shell.h
samples/nrf9160/modem_shell/src/utils/: CMakeLists.txt  fta_net_utils.c  fta_net_utils.h  net_utils.c  net_utils.h  private.c  private.h  str_utils.c  str_utils.h  time_utils.c  time_utils.h
(+97 files in other folders)
